# adventofcode2024

./: .gitignore
clojure/src/adventofcode2024/: day1.clj
clojure/test/adventofcode2024/: core_test.clj  day1_test.clj
python/: .python-version  Makefile  Readme.md  pyproject.toml
python/src/day1/: input_small.txt  main.py
python/src/day2/: main.py
python/src/day3/: main.py
python/src/day4/: main.py  main2.py
python/src/day5/: main.py
python/tests/day5/: test_main.py
